--- a/css/styles.css
+++ b/css/styles.css
@@ -1,31 +1,35 @@
-#submit {
-  margin-top: 20px;
-}
+
 
 h4 {
   margin-bottom: 40px;
 }
-.question-gray {
-  margin-bottom: 15px;
-  margin-top: 15px;
-}
 .question {
-  margin-bottom: 35px;
+  margin-bottom: 30px;
+}
+
+.name {
+  margin-bottom: 30px;
 }
 
 .question-gray {
   background-color: #e9ecef;
   padding: 5px, 0px, 5px, 0px;
   border-radius: 5px;
+  margin-bottom: 10px;
 
 }
 select {
-  margin-left: 10px;
+  margin-left: 20px;
 }
 select.select-gray {
-margin-bottom: 10px;
+margin-bottom: 20px;
+
 }
 label {
-  margin: 10px 0px 10px 10px;
+  margin: 20px 0px 10px 20px;
+}
 
+button#submit {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
