update css styling on the result. Add new title after result is displayed and program the show hide options for these in javascript

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
+#complete {
+  display: none;
+}
 
-
-h4 {
+h4, h3 {
   margin-bottom: 40px;
 }
 .question {
@@ -35,7 +37,9 @@ button#submit, button#secondary {
 }
 
 #result {
-  font-size: 30px;
+  font-size: 36px;
+  margin: 20px 0px 10px 0px;
+  font-style: italic;
 }
 #story {
   display: none;
