--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,8 @@ h4, h3 {
   padding: 5px, 0px, 5px, 0px;
   border-radius: 5px;
   margin-bottom: 10px;
+  border: 1px solid #BFBFBF;
+  box-shadow: 10px 10px 5px #aaaaaa;
 
 }
 select {
@@ -34,6 +36,8 @@ label {
 button#submit, button#secondary {
   margin-top: 20px;
   margin-bottom: 20px;
+  border: 1px solid #BFBFBF;
+  box-shadow: 5px 5px 3px #aaaaaa;
 }
 
 #result {
@@ -53,4 +57,6 @@ footer{
 
 .jumbotron {
   background-color: #ebf0ee;
+  border: 1px solid #BFBFBF;
+  box-shadow: 10px 10px 5px #aaaaaa;
 }
