--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,14 @@ h4, h3 {
   margin-bottom: 40px;
 }
 .question {
-  margin-bottom: 30px;
+  
+  background-color: #CFD0DD;
+  color: black;
+  padding: 5px, 0px, 5px, 0px;
+  border-radius: 5px;
+  margin-bottom: 20px;
+  border: 1px solid #BFBFBF;
+  box-shadow: 10px 10px 5px #aaaaaa;
 }
 
 .labelName {
@@ -19,7 +26,7 @@ p {
   background-color: #ebf0ee;
   padding: 5px, 0px, 5px, 0px;
   border-radius: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   border: 1px solid #BFBFBF;
   box-shadow: 10px 10px 5px #aaaaaa;
 
@@ -27,7 +34,7 @@ p {
 select {
   margin-left: 20px;
 }
-select.select-gray {
+select.select-gray, select {
 margin-bottom: 20px;
 
 }
